# MerkSeal

./: .env.example  .gitignore  BENCHMARKS.md  CONFIG.md  Cargo.toml  DEMO.md  E2E_TESTING.md  ECOSYSTEM.md  MANTLE_ARCHITECTURE.md  README.md  TECHNICAL_REPORT.md  VIDEO_DEMO.md  deploy.ps1  deploy.sh  fix-env.sh  test-e2e.ps1  test-e2e.sh
batches/: .gitkeep
client/: Cargo.toml  README.md
client/src/: main.rs
contracts/: .gitignore  DEPLOYMENT.md  MerkleBatchRegistry.sol  foundry.toml
contracts/script/: Deploy.s.sol
examples/legal-notarization/: README.md  generate-certificate.js  sample-contract.txt
mantle_config/: Cargo.toml
mantle_config/src/: lib.rs
merkle_tree/: Cargo.toml
merkle_tree/src/: lib.rs
scripts/: MerkleBatchRegistry.abi.json  README.md  anchor.js  package.json
sdk/: README.md  package.json  tsconfig.json
sdk/examples/: basic-usage.ts
sdk/src/: index.ts
server/: API.md  Cargo.toml
server/src/: main.rs
subgraph/: README.md  package.json  schema.graphql  subgraph.yaml
subgraph/src/: mapping.ts
