[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
mantle_config = { path = "../mantle_config" }
merkle_tree = { path = "../merkle_tree" }
reqwest = {version = "0.12.24", features = ["json"]}
serde = {version = "1.0.228" , features = ["derive"]}
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
clap = { version = "4.4", features = ["derive"] }
ethers = "2.0"
hex = "0.4"
