[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
mantle_config = { path = "../mantle_config" }
merkle_tree = { path = "../merkle_tree" }
actix-web = "4.12.1"
actix-multipart = "0.7"
serde = {version = "1.0.228" , features = ["derive"]}
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3"
